--- a/redux/official-essentials/package.json
+++ b/redux/official-essentials/package.json
@@ -18,7 +18,8 @@
     "@reduxjs/toolkit": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.4",
@@ -28,14 +29,18 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^5.1.3",
     "jsdom": "^23.2.0",
+    "postcss": "^8.4.39",
     "prettier": "^3.2.1",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
+    "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.2.0"
   }
 }
